<resources>
    <string name="app_name">ZeepLive</string>

    <!--    <string name="facebook_app_id">1862629050695106</string>-->
    <string name="facebook_app_id">345954266373042</string>

    <string name="agora_app_id">a001570469104215bc17ec43b986b26c</string>


    <!--  <string name="agora_access_token">006bd11c4dd81f14db0ab2d520b132f9e3cIAAr2VVwPPkIyKr/SqmUJQGDz/UeQ7bBm3c8bbingfuyP6DfQtYAAAAAEAAI1Snxq8RpXgEAAQCqxGle</string>
-->

    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="tap_to_reload">Tap to Reload</string>

    <array name="complaint_types">
        <item>Payment Related Issue</item>
        <item>Wrong Information</item>
        <item>Profile Related Issue</item>
        <item>Wrong &amp; Unusual Charges</item>
        <item>Video &amp; Chat Related Issue</item>
        <item>Other</item>
    </array>

    <array name="state_list">
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Mumbai</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>New Delhi</item>
        <item>Odisha</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura Agartala</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>Gairsain</item>
        <item>West Bengal</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Chandigarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Jammu and Kashmir</item>
        <item>Ladakh</item>
        <item>Lakshadweep</item>
        <item>Puducherry</item>
    </array>

    <!--    onCam fragment strings-->
    <string name="start">Random Match</string>
    <string name="face_to_face">Face To Face</string>
    <string name="you_re">YOU’RE</string>
    <string name="riend">RIEND</string>
    <string name="f">F</string>
    <string name="s">S!</string>
    <string name="say_hello">SAY HELLO</string>
    <string name="video_call">VIDEO CALL</string>
    <string name="connecting_camera">Connecting \n Camera…</string>
    <string name="you_and_puja_cutipie_liked_each_other">You and (girl name) liked each other.</string>
    <string name="finding_people_who_are_video_chatting_in_real_time_for_you">Finding people who are video chatting in real-time for you…</string>
    <string name="instructions">You’ll have 10 seconds to decide whether you like each other or not. Light up the heart if you find love at first sight!</string>
    <string name="next">Next</string>
    <string name="filter">filter</string>
    <string name="button_ok">OK</string>


    <item name="item_click_support" type="id" />


    <!-- Main Activity -->

    <!-- Setting Activity -->

    <!-- Live Activity -->

    <!-- Role Choose Activity -->

    <!-- Legal digits for channel names -->
    <string name="allow">Allow access to the following permission\nfot better service </string>

    <string-array name="searchWordsArray">
        <item>one</item>
        <item>two</item>
        <item>three</item>
        <item>four</item>
        <item>five</item>
        <item>six</item>
        <item>seven</item>
        <item>eight</item>
        <item>nine</item>
        <item>ten</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>mobile</item>
        <item>number</item>
        <item>phone</item>
        <item>nu</item>
        <item>no</item>
        <item>fuck</item>
        <item>whatsapp</item>
        <item>facebook</item>
    </string-array>

    <string name="higher">Higher Level makes you cooler
        \n in ZeepLive.</string>

    <string name="balance_less">When your balance is less than 1500 diamonds, Level will become Lv0</string>
    <string name="privacypolicy"><u>Privacy Policy</u>.</string>
    <string name="useragreement"><u>User Agreement </u></string>

    <string name="toast_image_intent_null">Null</string>
    <string name="lbl_set_profile_photo">Set profile photo</string>
    <string name="lbl_take_camera_picture">Take camera picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="you_wil_get">You wil get several Video Chat Cards after</string>
    <string name="the_new">The new version is currently
        \navailable For better experience
        \nin our app, we suggest you to
        \nupdate now.</string>

    <string name="no_fu_auth_notice">No FaceUnity authentication found</string>

    <!-- Action Sheet -->
    <string name="live_room_setting_action_sheet_title">Setting</string>
    <string name="live_room_setting_title_resolution">Resolution</string>
    <string name="live_room_setting_title_framerate">Frame Rate</string>
    <string name="live_room_setting_title_bitrate">Bitrate</string>
    <string name="live_room_setting_bitrate_value_format">%d kbps</string>
    <string name="live_room_setting_bitrate_value_default">Default</string>

    <string name="live_room_beauty_action_sheet_title">Beauty</string>
    <string name="live_room_beauty_action_sheet_blur">Blur</string>
    <string name="live_room_beauty_action_sheet_color">Brighten</string>
    <string name="live_room_beauty_action_sheet_cheek_thinning">Thinning</string>
    <string name="live_room_beauty_action_sheet_eye_enlarge">Eye</string>

    <string name="the_recommendation">The recommendation will be based on\n
         your gender. You can not modify it\n
         anymore.. </string>
    <!-- Strings used for fragments for navigation -->

    <string name="live_prepare_room_restriction" >This is a testing product. Please refrain from using it commercially. The max duration per session is 10 minutes, and the max number of participants per channel is 10.</string>
    <string name="live_prepare_name_too_long_toast_format" >Room name cannot be longer than %d characters </string>
    <string name="live_prepare_no_room_name" />
    <string name="network_unavailable">network unavailable</string>
    <string name="network_switch_to_wifi">network switch_to_wifi</string>
    <string name="network_switch_to_mobile">network switch_to_mobile</string>

</resources>
