<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/live_room_action_sheet_beauty_height"
    android:background="@drawable/round_top_corner_white_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/live_room_action_sheet_text_item_height"
        android:paddingStart="@dimen/live_room_action_sheet_margin"
        android:paddingEnd="@dimen/live_room_action_sheet_margin">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/live_room_action_sheet_text_item_height"
            android:gravity="center"
            android:text="@string/live_room_beauty_action_sheet_title"
            android:textAlignment="gravity"
            android:textColor="@color/gray_darkest"
            android:textSize="@dimen/text_size_normal" />

        <View
            android:id="@+id/beauty_switch"
            android:layout_width="42dp"
            android:layout_height="28dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/switch_background" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/live_room_action_sheet_item_divider_height"
        android:layout_marginStart="@dimen/live_room_action_sheet_margin"
        android:layout_marginEnd="@dimen/live_room_action_sheet_margin"
        android:background="@color/gray_lightest" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/live_room_action_sheet_seek_bar_item_height"
        android:paddingStart="@dimen/live_room_action_sheet_margin"
        android:paddingEnd="@dimen/live_room_action_sheet_margin">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/beauty_title_blur"
            android:layout_width="@dimen/live_room_action_sheet_beauty_title_width"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="start"
            android:text="@string/live_room_beauty_action_sheet_blur"
            android:textAlignment="gravity" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/beauty_value_blur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textAlignment="gravity" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/beauty_blur_progress_bar"
            style="@style/action_sheet_beauty_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/live_room_setting_progress_height"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/beauty_value_blur"
            android:layout_toEndOf="@id/beauty_title_blur" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/live_room_action_sheet_seek_bar_item_height"
        android:paddingStart="@dimen/live_room_action_sheet_margin"
        android:paddingEnd="@dimen/live_room_action_sheet_margin">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/beauty_title_whiten"
            android:layout_width="@dimen/live_room_action_sheet_beauty_title_width"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="start"
            android:text="@string/live_room_beauty_action_sheet_color"
            android:textAlignment="gravity" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/beauty_value_whiten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textAlignment="gravity" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/beauty_whiten_progress_bar"
            style="@style/action_sheet_beauty_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/live_room_setting_progress_height"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/beauty_value_whiten"
            android:layout_toEndOf="@id/beauty_title_whiten" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/live_room_action_sheet_seek_bar_item_height"
        android:paddingStart="@dimen/live_room_action_sheet_margin"
        android:paddingEnd="@dimen/live_room_action_sheet_margin">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/beauty_title_cheek"
            android:layout_width="@dimen/live_room_action_sheet_beauty_title_width"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="start"
            android:text="@string/live_room_beauty_action_sheet_cheek_thinning"
            android:textAlignment="gravity" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/beauty_value_cheek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textAlignment="gravity" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/beauty_cheek_progress_bar"
            style="@style/action_sheet_beauty_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/live_room_setting_progress_height"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/beauty_value_cheek"
            android:layout_toEndOf="@id/beauty_title_cheek" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/live_room_action_sheet_seek_bar_item_height"
        android:paddingStart="@dimen/live_room_action_sheet_margin"
        android:paddingEnd="@dimen/live_room_action_sheet_margin">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/beauty_title_eye"
            android:layout_width="@dimen/live_room_action_sheet_beauty_title_width"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="start"
            android:text="@string/live_room_beauty_action_sheet_eye_enlarge"
            android:textAlignment="gravity" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/beauty_value_eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textAlignment="gravity" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/beauty_eye_progress_bar"
            style="@style/action_sheet_beauty_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/live_room_setting_progress_height"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/beauty_value_eye"
            android:layout_toEndOf="@id/beauty_title_eye" />
    </RelativeLayout>
</LinearLayout>
